# dca-module-workshop

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  dca_app-aarch64.wasm
contracts/dca/: Cargo.toml
contracts/dca/examples/: deploy.rs
contracts/dca/src/: contract.rs  msg.rs  state.rs
contracts/dca/src/handlers/: execute.rs  instantiate.rs
contracts/dca/tests/: integration.rs
