[workspace]
members = [
  "contracts/*",
]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

[workspace.package]
version = "0.21.0"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Riada <riada@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://docs.abstract.money/"
repository = "https://github.com/AbstractSDK/contracts"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]

[workspace.dependencies]
cosmwasm-std = { version = "1.5" }
cosmwasm-schema = { version = "1.5" }
cw-controllers = { version = "1.1.2" }
cw-storage-plus = "1.2.0"

cw-asset = { version = "3.0" }

schemars = "0.8"
thiserror = { version = "1.0" }

clap = { version = "4.0.32", features = ["derive"] }
cw-orch = { version = "0.20.1" }

## crates in order of publishing ## see docs/Publishing.md

abstract-client = { version = "0.21.0" }
abstract-app = { version = "0.21.0" }
abstract-core = { version = "0.21.0" }
abstract-testing = { version = "0.21.0" }
abstract-interface = { version = "0.21.0" }
abstract-sdk = { version = "0.21.0" }

abstract-dex-adapter = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.21.0" }
abstract-adapter-utils = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.21.0" }
abstract-dex-adapter-traits = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.21.0" }
abstract-staking-adapter-traits = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.21.0" }

croncat-app = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.21.0" }
wyndex-bundle = { git = "https://github.com/AbstractSDK/abstract.git", tag = "v0.21.0" }

## Testing
cw-multi-test = { version = "0.16.2" }
rstest = "0.21.0"
speculoos = "0.11.0"
anyhow = "1"

# Backup release profile, will result in warnings during optimization
[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
